--- a/3.PHASE/Phase3.css
+++ b/3.PHASE/Phase3.css
@@ -1,8 +1,8 @@
 h1{
 	margin-left:30px;
 	margin-top:50px;
+    color:#FFF
 }
-
 
 #start{
 	height:100px;
@@ -13,17 +13,19 @@ h1{
     margin: 0;
     position: absolute;
     top: 50px; 
+    border: 2px solid;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     height: 150px;
     width: 90px;
     margin-left: 20px; 
 	margin-top:  150px; 
-   moz-border-radius: 50%;
-   webkit-border-radius: 50%;
+    moz-border-radius: 50%;
+    webkit-border-radius: 50%;
 	 border-radius: 50%;
-	 background-color:#00F;
-	color:#FFF
+	 background-color:#FFF;
+	color:#000;
+    font-weight: bold;
 }
 
 
@@ -32,6 +34,7 @@ h1{
     margin: 0;
     position: absolute;
     top: 200px;
+    border: 2px solid;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     height: 100px;
@@ -41,13 +44,14 @@ h1{
 	-moz-border-radius: 50%;
     -webkit-border-radius: 50%;
 	 border-radius: 50%;
-	 background-color:#00F;
-	color:#FFF
+	 background-color:#FFF;
+	color:#000;
+    font-weight: bold;
 }
 
 .vertical-center-show {
     margin: 0;
-	border: 2px solid blue;
+	border: 2px solid;
     position: absolute;
     top: 50px;
     -ms-transform: translateY(-50%);
@@ -59,14 +63,16 @@ h1{
 	-moz-border-radius: 50%;
     -webkit-border-radius: 50%;
 	 border-radius: 50%;
-	 background-color:#00F;
-	color:#FFF
+	 background-color:#FFF;
+	color:#000;
+    font-weight: bold;
 }
 
 .vertical-center-mix {
     margin: 0;
     position: absolute;
     top: 50px;
+    border: 2px solid;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     height: 100px;
@@ -74,8 +80,9 @@ h1{
 	border-radius:50%;
     margin-left: 150px;
     margin-top: 150px;
-	background-color:#00F;
-	color:#FFF
+	background-color:#FFF;
+	color:#000;
+    font-weight: bold;
 }
 
 #exit{
@@ -83,8 +90,9 @@ h1{
 	width:250px;
 	margin-top:300px;
 	height:40px;
-	background-color:#00F;
-	color:#FFF
+	background-color:#FFF;
+	color:#000;
+    font-weight: bold;
 }
 
 *{
@@ -93,7 +101,6 @@ h1{
     box-sizing: border-box;
 }
 body{
-	
     height: 100vh;
     display: flex;
 }
@@ -103,8 +110,8 @@ img{
 }
 
 .game{
-    width: 640px;
-    height: 640px;
+    width: 620px;
+    height: 620px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
